# ros-rpmdemo

./: 0001-Provision-as-group-union-package.patch  0001-Specify-group-dependency-semantics.patch  CMakeLists.txt  debian.store  index-v4.yaml  index.yaml  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
baz_msgs/: CMakeLists.txt  package.xml
debian/: changelog  control  copyright  gbp.conf  rules
idl_core_generators/: CMakeLists.txt  package.xml
idl_core_runtime/: CMakeLists.txt  package.xml
idl_generator_bar/: CMakeLists.txt  package.xml
idl_generator_foo/: package.xml
idl_generator_packages_union/: CMakeLists.txt  package.xml
idl_runtime_bar/: CMakeLists.txt  package.xml
idl_runtime_foo/: package.xml
idl_runtime_packages_union/: package.xml
msg_packages_union/: CMakeLists.txt  package.xml
qux_msgs/: CMakeLists.txt  package.xml
ros_workspace/: CMakeLists.txt  package.xml
rpm/: ros-rpmdemo-baz-msgs.spec  ros-rpmdemo-idl-core-generators.spec  ros-rpmdemo-idl-core-runtime.spec  ros-rpmdemo-idl-generator-bar.spec  ros-rpmdemo-idl-generator-foo.spec  ros-rpmdemo-idl-generator-packages-union.spec  ros-rpmdemo-idl-runtime-bar.spec  ros-rpmdemo-idl-runtime-packages-union.spec  ros-rpmdemo-msg-packages-union.spec  ros-rpmdemo-qux-msgs.spec  ros-rpmdemo-ros-workspace.spec  template.spec
rpmdemo/: .gitignore  distribution.yaml  release-rhel-build.yaml
