<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>idl_core_runtime</name>
  <version>1.0.1</version>
  <description>ROS RPM demo package</description>
  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/cottsay/ros-rpmdemo</url>
  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>cmake</buildtool_depend>

  <!-- The 'foo' typesupport is considered 'core' and required -->
  <exec_depend>idl_runtime_foo</exec_depend>

  <!-- This will pick up all other available typesupport -->
  <group_depend>idl_runtime_packages</group_depend>

  <export>
    <architecture_independent/>
    <build_type>cmake</build_type>
  </export>
</package>
